--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <div class="top-container">
         <img class="top-cloud" src="cloud.png" alt="cloud-image">
         <h1>I'm Vineet</h1>
-        <p>A programmer</p>
+        <h2>A programmer</h2>
         <img class="bottom-cloud" src="cloud.png" alt="cloud-image">
         <img class="mountain" src="mountain.png" alt="mountain-image">
       </div>
@@ -26,12 +26,12 @@
         <div class="skills">
           <h2>My Skills.</h2>
           <div class="skill-row">
-            <img class="" src="hacker.png" alt="">
+            <img class="hacker-img" src="hacker.png" alt="">
             <h3>Lorem & Ipsum</h3>
             <p>Lorem ipsum dolor sit amet, quis in duis, iaculis id felis. Consectetuer vestibulum, nunc urna lectus, erat ligula. Hendrerit nam, lectus ante, ut lorem eros.</p>
           </div>
           <div class="skill-row">
-            <img width="100px" src="giphy.gif" alt="GIF">
+            <img class="fire-img" src="giphy.gif" alt="GIF">
             <h3>Lorem Ipsum Dolor</h3>
             <p>Lorem ipsum dolor sit amet, mauris sed consectetuer. Etiam et eu, bibendum interdum, lacus quis mauris. Curabitur wisi, quisque vel eu, rutrum nam.</p>
           </div>
@@ -48,9 +48,9 @@
 
       <div class="bottom-container">
         <a class="footer-link" href="https://www.linkedin.com/">LinkedIn</a>
-        <a class="footer-link" href="https://twitter.com/">Twitter</a>
-        <a class="footer-link" href="https://www.appbrewery.co/">Website</a>
-        <p>© 2018 Name Surname.</p>
+        <a class="footer-link" href="tel:+917566891521">Call Me</a>
+        <a class="footer-link" href="https://wa.me/+917566891521">Whatsapp</a>
+        <p>© 2023 Vineet Tiwari.</p>
       </div>
 
   </body>
