--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       </div>
       <div class="middle-container">
         <div class="profile">
-          <img class="photo" src="E:\NF\clg\IMG-20220517-WA0055.jpg" alt="Profile photo">
+          <img class="photo" src="IMG-20220517-WA0055.jpg" alt="Profile photo">
           <h2>Hello.</h2>
           <p>Lorem ipsum dolor sit amet, vitae volutpat, dui conubia, dolor urna. Non auctor, montes nulla distinctio.</p>
         </div>
